--- a/src/pages/main/style.css
+++ b/src/pages/main/style.css
@@ -10,6 +10,9 @@
     border-radius: 5px;
     padding: 20px;
     margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .product-list article p {
@@ -32,6 +35,7 @@
     justify-content: center;
     align-items: center;
     transition: all 0.2s;
+    width: 120px;
 }
 
 .product-list article a:hover {
